--- a/site/src/app.html
+++ b/site/src/app.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Janosh Riebesell" />
     <meta
       name="description"
-      content="Awesome examples of SvelteKit in the wild"
+      content="Awesome examples of SvelteKit sites in the wild"
     />
 
     <meta charset="utf-8" />
@@ -13,6 +13,12 @@
 
     <link rel="icon" href="/favicon.svg" />
     <link rel="stylesheet" href="/global.css" />
+
+    <script
+      defer
+      data-domain="awesome-svelte-kit.netlify.app"
+      src="https://plausible.io/js/plausible.js"
+    ></script>
 
     %svelte.head%
   </head>
