add https://github.com/janosh/periodic-table, https://github.com/liveblocks/pixel-art-together, https://github.com/bestguy/sveltestrap

--- a/site/src/app.html
+++ b/site/src/app.html
@@ -19,10 +19,10 @@
       src="https://plausible.io/js/plausible.js"
     ></script>
 
-    %svelte.head%
+    %sveltekit.head%
   </head>
 
   <body>
-    <div>%svelte.body%</div>
+    <div>%sveltekit.body%</div>
   </body>
 </html>
