--- a/site/src/app.html
+++ b/site/src/app.html
@@ -3,6 +3,10 @@
   <head>
     <title>Awesome SvelteKit</title>
     <meta name="author" content="Janosh Riebesell" />
+
+    <meta name="og:card" content="summary" />
+    <meta name="og:site" content="@@jrib_" />
+    <meta name="og:creator" content="@jrib_" />
     <meta
       name="description"
       content="Awesome examples of SvelteKit sites in the wild"
