rename repo and site from awesome-svelte-kit to awesome-sveltekit

--- a/site/src/app.html
+++ b/site/src/app.html
@@ -19,7 +19,7 @@
 
     <script
       defer
-      data-domain="awesome-svelte-kit.netlify.app"
+      data-domain="awesome-sveltekit.netlify.app"
       src="https://plausible.io/js/plausible.js"
     ></script>
 
