add svelte:head title, desc and og/twitter SEO meta tags

--- a/site/src/app.html
+++ b/site/src/app.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Awesome SvelteKit</title>
     <meta name="author" content="Janosh Riebesell" />
-
     <meta name="og:card" content="summary" />
-    <meta name="og:site" content="@@jrib_" />
-    <meta name="og:creator" content="@jrib_" />
-    <meta
-      name="description"
-      content="Awesome examples of SvelteKit sites in the wild"
-    />
+    <meta name="twitter:site" content="@jrib_" />
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
