--- a/site/src/app.html
+++ b/site/src/app.html
@@ -19,7 +19,7 @@
     %sveltekit.head%
   </head>
 
-  <body>
+  <body data-sveltekit-prefetch>
     <div>%sveltekit.body%</div>
   </body>
 </html>
