display GitHub avatars on detail pages and days since project started (in tooltip)
rename project sveriodic-table to elementari
update deps

--- a/site/src/app.html
+++ b/site/src/app.html
@@ -12,7 +12,7 @@
 
     <script
       defer
-      data-domain="https://janosh.github.io/awesome-sveltekit"
+      data-domain="awesome-sveltekit.janosh.dev"
       src="https://plausible.io/js/plausible.js"
     ></script>
 
